# distributional-sr

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
dsm/: __init__.py  __main__.py  configs.py  datasets.py  envs.py  kernels.py  metric_writers.py  metrics.py  models.py  rewards.py  stade.py  state.py  tags.py  train.py  types.py
dsm/plotting/: __init__.py  pendulum.py  utils.py
dsm/scripts/: make_dataset.py  make_forward_model_returns.py  make_mc_returns.py
